syntax="proto3";
option java_multiple_files= true;
option java_package="com.gRPC.doctor";
option java_outer_classname="DoctorLocationgRPC";
message AddDoctorRequest{
    string doctorDesignation=1;
    string doctorName=2;
    repeated string experties=3;
    string experience=4;
    string fee=5;
    double latitude=6;
    double longitude=7;
    string phone_no=8;
};

message UpdateRequest{

  string doctorId=1;
  string doctorDesignation=2;
  string doctorName=3;
  repeated string experties=4;
  string experience=5;
  string fee=6;
  double latitude=7;
  double longitude=8;
  string phone_no=9;
};
message UpdatedResponse{
  optional UpdateRequest update=1;
};

message EmptyResponse{

};

service DoctorService{
  rpc AddDoctor(AddDoctorRequest) returns (EmptyResponse);
  rpc UpdateDoctor(UpdateRequest) returns (UpdatedResponse);


};